@@ -1,6 +1,12 @@
 <div i18n:domain="icemac.addressbook">
   <h2 i18n:translate="">Names of selected persons</h2>
   <p tal:content="view/person_list" />
-  <a tal:attributes="href view/next_url"
-     i18n:translate="">Go back to addressbook</a>
+  <br />
+  <p i18n:translate="">
+    Number of persons: <span tal:replace="view/person_count"
+                             i18n:name="count" />
+  </p>
+  <br />
+  <a href="javascript:history.go(-1)"
+     i18n:translate="">Go back</a>
 </div>
